--- a/landing_page.html
+++ b/landing_page.html
@@ -44,6 +44,7 @@
             <!--card1------->
             <div class="card">
                 <p>A glass-like card to demonstrate the <strong>Glassmorphism UI design</strong> trend.</p>
+                <P>ejdneijd</P>
                 
               </div>
         </div>
