--- a/landing_page.html
+++ b/landing_page.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="/about_us">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/signup">Sign Up</a>
+                        <a class="nav-link" href="http://127.0.0.1:5500/signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
