--- a/signup.html
+++ b/signup.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="signup.css">
     <title>Sign Up</title>
 </head>
 <body>
+    <div class="get-flashed-messeges">
 {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class="flashes">
@@ -16,6 +18,7 @@
         </ul>
       {% endif %}
     {% endwith %}
+    </div>
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
