--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
                             {% endif %}
                         </form>
 						<div class="mt-4">
-                            <p>Already have an account? <a href="http://127.0.0.1:5500/login.html">Log in here</a>.</p>
+                            <p>Already have an account? <a href="login.html" >Log in here</a>.</p>
                         </div>
                     </article>
                 </div>
