--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                             {% endif %}
                         </form>
 						<div class="mt-4">
-                            <p>create an account? <a href="http://127.0.0.1:5500/signup.html">create account</a>.</p>
+                            <p>create an account? <a href="signup.html" >create account</a></p>
                         </div>
                     </article>
                 </div>
